--- a/lab31.html
+++ b/lab31.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+<link rel="stylesheet" type=text/css href="mystyle.css" />
+</head>
 <body>
 <h3 style="color: red; text-align: center;">
 	<span style="font-size:28px;"><span style="font-family:comic sans ms,cursive;">Example of Form and Table</span></span></h3>
