--- a/test.html
+++ b/test.html
@@ -22,8 +22,7 @@
 #div2{animation:movep 5s 1;
 background-image:url(image/1.jpg);
 width:200px;height:200px;
-background-repeat:no-repeat;
-transform-origin:356px 100px}
+background-repeat:no-repeat;}
 
 #div1{animation:slide 15s infinite;
 width:400px;height:300px;
